add phone data in payload
